bitfields/tests/compile_error_cases/errors/bitfield_float_type.rs
use bitfields::bitfield;

#[bitfield(f64)]
pub struct Bitfield {
    a: u64,
}

#[bitfield(0f32)]
pub struct Bitfield {
    a: u64,
}

fn main() {}
