bitfields/tests/compile_error_cases/errors/bitfield_float_type.stderr
error: The bitfield must have an unsigned integer type as its first argument, floats are unsupported.
 --> tests/compile_error_cases/errors/bitfield_float_type.rs:3:1
  |
3 | #[bitfield(f64)]
  | ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)

error: The bitfield must have an unsigned integer type as its first argument, 'expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, `dyn`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime' is unsupported.
 --> tests/compile_error_cases/errors/bitfield_float_type.rs:8:12
  |
8 | #[bitfield(0f32)]
  |            ^^^^
